; ModuleID = '/home/carl/AnghaBench/ish/kernel/extr_mmap.c_sys_mmap.c'
source_filename = "/home/carl/AnghaBench/ish/kernel/extr_mmap.c_sys_mmap.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mmap_arg_struct = type { i32, i32, i32, i32, i32, i32 }

@_EFAULT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @sys_mmap(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca %struct.mmap_arg_struct, align 8
  store i32 %0, i32* %3, align 4
  %5 = load i32, i32* %3, align 4
  %6 = call i64 @user_get(i32 %5, %struct.mmap_arg_struct* byval(%struct.mmap_arg_struct) align 8 %4)
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %10

8:                                                ; preds = %1
  %9 = load i32, i32* @_EFAULT, align 4
  store i32 %9, i32* %2, align 4
  br label %24

10:                                               ; preds = %1
  %11 = getelementptr inbounds %struct.mmap_arg_struct, %struct.mmap_arg_struct* %4, i32 0, i32 5
  %12 = load i32, i32* %11, align 4
  %13 = getelementptr inbounds %struct.mmap_arg_struct, %struct.mmap_arg_struct* %4, i32 0, i32 4
  %14 = load i32, i32* %13, align 4
  %15 = getelementptr inbounds %struct.mmap_arg_struct, %struct.mmap_arg_struct* %4, i32 0, i32 3
  %16 = load i32, i32* %15, align 4
  %17 = getelementptr inbounds %struct.mmap_arg_struct, %struct.mmap_arg_struct* %4, i32 0, i32 2
  %18 = load i32, i32* %17, align 4
  %19 = getelementptr inbounds %struct.mmap_arg_struct, %struct.mmap_arg_struct* %4, i32 0, i32 1
  %20 = load i32, i32* %19, align 4
  %21 = getelementptr inbounds %struct.mmap_arg_struct, %struct.mmap_arg_struct* %4, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  %23 = call i32 @mmap_common(i32 %12, i32 %14, i32 %16, i32 %18, i32 %20, i32 %22)
  store i32 %23, i32* %2, align 4
  br label %24

24:                                               ; preds = %10, %8
  %25 = load i32, i32* %2, align 4
  ret i32 %25
}

declare dso_local i64 @user_get(i32, %struct.mmap_arg_struct* byval(%struct.mmap_arg_struct) align 8) #1

declare dso_local i32 @mmap_common(i32, i32, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
